[package]
name = "lois"
version = "0.1.0"
authors = ["jesmpx <joao.eduardo@lar.app>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.7.0"
raw-window-handle = "0.3.3"
glam = "0.13.0"

[build-dependencies]
shaderc = "0.7"