[package]
name = "example"
version = "0.1.0"
authors = ["axepeartree <joaoeduardo.smp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.13"
lois = { path = "../lois" }
lois-wgpu = { path = "../lois-wgpu" }
winit = "0.24.0"
image = "0.23.14"
