[package]
name = "lois-wgpu"
version = "0.1.0"
authors = ["axepeartree <joaoeduardo.smp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.7.0"
raw-window-handle = "0.3.3"
glam = "0.13.0"
lois = { path = "../lois" }
winit = "0.24.0"

[build-dependencies]
shaderc = "0.7"